--- a/css/style.css
+++ b/css/style.css
@@ -195,3 +195,82 @@ i   {
 .testimonial-text   {
     align-self: center;
 }
+
+/*benefits*/
+.benefits   {
+    background-color: #9593e6;
+}
+
+.benefits-wrapper   {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.benefits-cards-container   {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.benefit-card   {
+    flex-basis: calc(100%/3);
+    background-color: white;
+    border-radius: 25px;
+    padding: 2rem;
+    margin-bottom: 0.2rem;
+}
+
+/*about us*/
+
+.about-us-img-container img{
+    aspect-ratio: 1;
+    border-radius: 50%;
+    margin: 2rem;
+}
+
+.about-us-img-container {
+    position: relative;
+}
+
+.about-us-wrapper   {
+    display: flex;
+
+}
+
+.about-us-img-container i  {
+    position:absolute;
+    right:0%;
+    top:0%;
+    font-size: 6rem;
+}
+
+/*get started*/
+.get-started    {
+    background-color: #9593e6;
+}
+
+/*footer*/
+.footer {
+    background-color: gray;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+ /*tablet*/
+ @media screen and (max-width: 768px)   {
+    .nav-menu ul{
+        display: none;
+    }
+    .nav-menu  {
+        font-family: "Font Awesome 5 Free";
+        content:"\e1cf"
+    }
+ }
+
+ /*smartphone*/
+ @media screen and (max-width: 480px)   {
+ }
